# dma-speedtest-memflow-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
patches/atty/: Cargo.toml
patches/atty/src/: lib.rs
src/: bench_config.rs  cli.rs  cli_dma_speedtest.rs  connector.rs  gui_dma_speedtest.rs  lib.rs  main.rs
src/branding/: branding.7z
src/speedtest/: bench.rs  connector.rs  initialization.rs  mem_io.rs  memory_layout.rs  mod.rs  probe_targets.rs  report.rs  stats.rs  test_runner.rs  worker.rs  write_target.rs
src/ui/: console.rs  constants.rs  helpers.rs  mod.rs  modal.rs  types.rs  win_utils.rs
src/ui/app/: lifecycle.rs  mod.rs  state.rs  update.rs
src/ui/config_panel/: bench_mode.rs  connector_section.rs  header.rs  mod.rs  panel.rs  start_button.rs  test_sizes.rs  ui_scale.rs
src/ui/plot_controls/: controls.rs  dimension.rs  handlers.rs  mod.rs  reset.rs
src/ui/results_panel/: controls.rs  metrics.rs  mod.rs  panel.rs  plot.rs  progress.rs  table.rs
src/ui/test_management/: mod.rs  starter.rs  updater.rs
